--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ShadowBotV3",
+  "name": "Melibot",
   "version": "10.8.9",
-  "description": "Subscribete a The Shadow Borkers - Bot (≧▽≦)",
+  "description": "uwu - Bot (≧▽≦)",
   "depecrated": false,
   "main": "index.js",
   "directories": {
